# inloop

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  config.toml.example  extensions.toml  inloop.toml.example  mcp.json.example  pyproject.toml
app/: agent.py  conversation.py
demo/: main.py
demo/tools/: calculator.py
docs/: CLAUDE.md  builtin-tools.md  builtin.md  configuration.md  extensions.md  hexagonal.md  instructions.md  logging.md  loop.md  mcp.md  providers.md  telegram.md  testing.md
domain/: extension.py  message.py  model.py  streaming.py  tool.py
extensions/browser/: pyproject.toml
extensions/browser/browser/: __init__.py
extensions/calculator/: pyproject.toml
extensions/calculator/calculator/: __init__.py  evaluate.py
extensions/calculator/tests/: test_evaluate.py
extensions/filesystem/: pyproject.toml
extensions/filesystem/filesystem/: __init__.py  operations.py
infra/: anthropic_model.py  extensions.py  together_model.py
inloop/app/: agent.py  clock.py  command.py  compaction.py  config.py  conversation.py  environment.py  extensions.py  filesystem.py  inbox.py  instructions.py  interaction.py  logger.py  model_config.py  reload.py  search.py  server_tools.py  spawn.py  system_prompt.py  tool_publisher.py  tool_server.py  tool_server_config.py  turn.py  turn_source.py
inloop/app/builtin/: __init__.py  grep.py  patch.py  read.py  spawn.py  write.py
inloop/app/builtin/filesystem/: __init__.py  append.py  copy.py  delete.py  edit.py  find.py  list.py  mkdir.py  move.py  read.py  search.py  write.py
inloop/cmd/: dispatch.py  extensions.py  probe.py  serve.py
inloop/contrib/: __init__.py  program.py  rescue.py  tool.py
inloop/demo/: main.py
inloop/demo/telegram/: client.py  config.py  formatting.py  main.py  server.py
inloop/domain/: extension.py  message.py  model.py  runnable.py  streaming.py  tool.py
inloop/infra/: agents_file.py  anthropic_model.py  app_dirs.py  directory_registry.py  env_config.py  extensions.py  local_filesystem.py  local_search.py  mcp_json_config.py  mcp_publisher.py  mcp_server.py  plain_logger.py  system_clock.py  system_environment.py  together_model.py  toml_config.py
inloop/infra/providers/: __init__.py  anthropic.py  factory.py  mock.py  openai.py  together.py
inloop_kit/: README.md  pyproject.toml
inloop_kit/inloop_kit/: __init__.py  extension.py  tool.py
scripts/: test_mcp_fail.py
tests/: test_agent.py  test_builtin_grep.py  test_builtin_patch.py  test_builtin_read.py  test_builtin_write.py  test_command.py  test_compaction.py  test_conversation.py  test_inbox.py  test_mcp.py  test_reload.py  test_tool_publisher.py
tests/anthropic/: test_anthropic.py
tests/builtin/filesystem/: test_append.py  test_copy.py  test_delete.py  test_edit.py  test_find.py  test_list.py  test_mkdir.py  test_move.py  test_read.py  test_search.py  test_write.py
tests/infra/: test_anthropic.py  test_deepwiki.py  test_mcp_json_config.py  test_plain_logger.py  test_system_environment.py  test_toml_config.py
