[project]
name = "inloop"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Vitaly Dolgov", email = "vitaly.dolgov@posteo.net" }
]
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inloop"]

[project.scripts]
demo = "inloop.demo.main:main"
extensions = "inloop.cmd.extensions:main"
probe = "inloop.cmd.probe:main"

[tool.uv]
default-groups = ["dev", "bundled_extensions"]

[tool.uv.sources]
browser = { path = "extensions/browser", editable = true }
calculator = { path = "extensions/calculator", editable = true }
filesystem = { path = "extensions/filesystem", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "rich>=13.0.0"
]
bundled_extensions = [
    "browser",
    "calculator",
    "filesystem",
]
anthropic = ["anthropic>=0.112.0"]
together = ["together>=2.19.0"]

[tool.pytest.ini_options]
addopts = ["-m", "not anthropic"]
markers = [
    "anthropic: hits the real Anthropic API",
]
