[project]
name = "inloop"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Vitaly Dolgov", email = "vitaly.dolgov@posteo.net" }
]
requires-python = ">=3.11"
dependencies = [
    "inloop-kit",
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "prompt-toolkit>=3.0.0",
    "python-dotenv>=1.2.2",
    "rich>=13.0.0",
]

[project.optional-dependencies]
telegram = [
    "aiohttp>=3.9",
    "markdown-it-py>=3.0",
    "pyngrok>=7.0",
]
anthropic = ["anthropic>=0.112.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inloop"]

[project.scripts]
inloop = "inloop.cmd.dispatch:main"

[tool.uv]
default-groups = ["dev", "bundled_extensions"]

[tool.uv.sources]
inloop-kit = { path = "inloop_kit", editable = true }
calculator = { path = "extensions/calculator", editable = true }
resources = { path = "extensions/resources", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.20",
]
bundled_extensions = [
    "calculator",
    "resources",
]

[tool.pytest.ini_options]
addopts = ["-m", "not anthropic and not deepwiki"]
markers = [
    "anthropic: hits the real Anthropic API",
    "deepwiki: hits the real DeepWiki MCP server",
]
