[project]
name = "inloop-kit"
version = "0.1.0"
description = "Toolkit for building inloop extensions."
readme = "README.md"
authors = [
    { name = "Vitaly Dolgov", email = "vitaly.dolgov@posteo.net" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inloop_kit"]
