[project]
name = "browser"
version = "0.1.0"
description = "Browser control tools via Playwright."
requires-python = ">=3.13"
dependencies = [
    "inloop",
    "playwright",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
inloop = { workspace = true }
