[project]
name = "calculator"
version = "0.1.0"
description = "Evaluates arithmetic expressions."
requires-python = ">=3.13"
dependencies = [
    "inloop",
]

[project.entry-points."inloop.extensions"]
calculator = "calculator:EXTENSION"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
inloop = { workspace = true }
