[project]
name = "calculator"
version = "0.1.0"
description = "Evaluates arithmetic expressions."
requires-python = ">=3.11"
dependencies = [
    "inloop-kit",
]

[project.entry-points."inloop.extensions"]
calculator = "calculator:EXTENSION"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
inloop-kit = { path = "../../inloop_kit", editable = true }
